--- a/CSS/global.css
+++ b/CSS/global.css
@@ -130,3 +130,37 @@ body {
 .darker {
     color: #464646;
 }
+
+.coverpage {
+    position: absolute;
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: #F4F4F4;
+
+    display: none;
+    z-index: 1000;
+}
+
+.coverpage {
+    display: none;
+    place-items: center;
+}
+.coverpage div {
+    text-align: center;
+    grid-area: 1/1/1/1;
+}
+
+@media only screen and (max-width: 900px) {
+    body, html {
+        overflow: hidden;
+    }
+    .coverpage {
+        display: grid;
+    }
+}
